; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ref.c_connect_and_write.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ref.c_connect_and_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@buffer = common dso_local global i32 0, align 4
@connect_req = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@write_req = common dso_local global i32 0, align 4
@write_cb = common dso_local global i32 0, align 4
@connect_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @connect_and_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @connect_and_write(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @buffer, align 4
  %7 = call i32 @uv_buf_init(i32 %6, i32 4)
  store i32 %7, i32* %5, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = icmp eq %struct.TYPE_4__* %8, @connect_req
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @write_cb, align 4
  %20 = call i32 @uv_write(i32* @write_req, i32 %18, i32* %5, i32 1, i32 %19)
  %21 = load i32, i32* @connect_cb_called, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* @connect_cb_called, align 4
  ret void
}

declare dso_local i32 @uv_buf_init(i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_write(i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
